@@ -1,0 +1,9 @@
+<html>
+  <head>
+    <link rel="start" title="site top" href="/" />
+    <link rel="canonical" href="http://localhost/canonical_uri" />
+  </head>
+  <body>
+    test
+  </body>
+</html>
